<resources>
    <string name="app_name">texView</string>
    <string name="action_search">Search</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="toolbar_title">tex<b>View</b></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_description">Lagervisualisierung</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_first_fragment">Hello test first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_1">Item 1</string>
    <string name="regal1">600101</string>
    <string name="regal2">600102</string>
    <string name="regal3">600103</string>
    <string name="regal4">600201</string>
    <string name="regal5">600202</string>
    <string name="regal6">Daten für Regal 6</string>
    <string name="regal7">Daten für Regal 7</string>
    <string name="regal8">Daten für Regal 8</string>
    <string name="regal9">Daten für Regal 9</string>
    <string name="regal10">Daten für Regal 10</string>
    <string name="regal11">Daten für Regal 11</string>
    <string name="regal12">Daten für Regal 12</string>
    <string name="item3">das ist ein text in strings.xml</string>
    <string name="regalSPACE">empty Field</string>
    <string name="regal0501">609001</string>
    <string name="regal0502">609002</string>
    <string name="regal0503">609003</string>
    <string name="regal0504">609004</string>
    <string name="regal0505">609005</string>
    <string name="regal0506">609006</string>
    <string name="regal0507">609007</string>
    <string name="regal0508">609008</string>
    <string name="regal0509">609009</string>
    <string name="regal0510">609100</string>
    <string name="regal0511">609101</string>
    <string name="regal0512">609102</string>
    <string name="regal0513">609103</string>
    <string name="regal0514">609104</string>
    <string name="regal0401">607001</string>
    <string name="regal0402">607002</string>
    <string name="regal0403">607003</string>
    <string name="regal0404">607004</string>
    <string name="regal0405">607005</string>
    <string name="regal0406">607006</string>
    <string name="regal0407">607007</string>
    <string name="regal0408">607008</string>
    <string name="regal0409">607009</string>
    <string name="regal0410">607100</string>
    <string name="regal0411">607101</string>
    <string name="regal0412">607102</string>
    <string name="regal0413">607103</string>
    <string name="regal0414">607104</string>
    <string name="regal0415">608001</string>
    <string name="regal0416">608002</string>
    <string name="regal0417">608003</string>
    <string name="regal0418">608004</string>
    <string name="regal0419">608005</string>
    <string name="regal0420">608006</string>
    <string name="regal0421">608007</string>
    <string name="regal0422">608008</string>
    <string name="regal0423">608009</string>
    <string name="regal0424">608100</string>
    <string name="regal0425">608101</string>
    <string name="regal0426">608102</string>
    <string name="regal0427">608103</string>
    <string name="regal0428">608104</string>
    <string name="regal0301">605001</string>
    <string name="regal0302">605002</string>
    <string name="regal0303">605003</string>
    <string name="regal0304">605004</string>
    <string name="regal0305">605005</string>
    <string name="regal0306">605006</string>
    <string name="regal0307">605007</string>
    <string name="regal0308">605008</string>
    <string name="regal0309">605009</string>
    <string name="regal0310">605100</string>
    <string name="regal0311">605101</string>
    <string name="regal0312">605102</string>
    <string name="regal0313">605103</string>
    <string name="regal0314">605104</string>
    <string name="regal0315">606001</string>
    <string name="regal0316">606002</string>
    <string name="regal0317">606003</string>
    <string name="regal0318">606004</string>
    <string name="regal0319">606005</string>
    <string name="regal0320">606006</string>
    <string name="regal0321">606007</string>
    <string name="regal0322">606008</string>
    <string name="regal0323">606009</string>
    <string name="regal0324">606100</string>
    <string name="regal0325">606101</string>
    <string name="regal0326">606102</string>
    <string name="regal0327">606103</string>
    <string name="regal0328">606104</string>
    <string name="regal0201">603001</string>
    <string name="regal0202">603002</string>
    <string name="regal0203">603003</string>
    <string name="regal0204">603004</string>
    <string name="regal0205">603005</string>
    <string name="regal0206">603006</string>
    <string name="regal0207">603007</string>
    <string name="regal0208">603008</string>
    <string name="regal0209">603009</string>
    <string name="regal0210">603100</string>
    <string name="regal0211">603101</string>
    <string name="regal0212">603102</string>
    <string name="regal0213">604001</string>
    <string name="regal0214">604002</string>
    <string name="regal0215">604003</string>
    <string name="regal0216">604004</string>
    <string name="regal0217">604005</string>
    <string name="regal0218">604006</string>
    <string name="regal0219">604007</string>
    <string name="regal0220">604008</string>
    <string name="regal0221">604009</string>
    <string name="regal0222">604100</string>
    <string name="regal0223">604101</string>
    <string name="regal0224">604102</string>
    <string name="regal0101">601001</string>
    <string name="regal0102">601002</string>
    <string name="regal0103">601003</string>
    <string name="regal0104">601004</string>
    <string name="regal0105">601005</string>
    <string name="regal0106">601006</string>
    <string name="regal0107">601007</string>
    <string name="regal0108">601008</string>
    <string name="regal0109">601009</string>
    <string name="regal0110">601100</string>
    <string name="regal0111">601101</string>
    <string name="regal0112">601102</string>
    <string name="regal0113">602001</string>
    <string name="regal0114">602002</string>
    <string name="regal0115">602003</string>
    <string name="regal0116">602004</string>
    <string name="regal0117">602005</string>
    <string name="regal0118">602006</string>
    <string name="regal0119">602007</string>
    <string name="regal0120">602008</string>
    <string name="regal0121">602009</string>
    <string name="regal0122">602100</string>
    <string name="regal0123">602101</string>
    <string name="regal0124">602102</string>
    <string name="regalTemp">606200</string>
    <string name="regalFach01">1</string>
    <string name="regalFach02">2</string>
    <string name="regalFach03">3</string>
    <string name="regalFach04">4</string>
    <string name="regalFach05">5</string>
    <string name="regalFach06">6</string>
    <string name="regalFach07">7</string>
    <string name="testFall">Bitte füllen Sie mindestens ein Feld aus</string>
    <string name="searchFragment_searchResults"> Suchergebnisse</string>
    <string name="searchFragment_title">Artikel Suche</string>
    <string name="searchFragment_submitButton">Suchen</string>
    <string name="searchFragment_textView_articleId">Artikel Nr</string>
    <string name="searchFragment_textView_articleShortDescription">Kurzbez.</string>
    <string name="searchFragment_textView_contains">(enthält)</string>
    <string name="searchFragment_textView_pieceId">Stücknummer</string>
    <string name="searchFragment_textView_pieceDivision">Stückteilung</string>
    <string name="searchFragment_textView_colorId">Farb ID</string>
    <string name="searchFragment_textView_colorDescription">Farbbez.</string>
    <string name="searchFragment_textView_size">Größe</string>
    <string name="searchFragment_textView_manufacturingState">Fert. Zustand</string>
    <string name="searchFragment_editText_articleId">Artikel Nr.</string>
    <string name="searchFragment_editText_articleShortDescription">Kurzbezeichnung</string>
    <string name="searchFragment_editText_pieceId">Stücknummer</string>
    <string name="searchFragment_editText_pieceDivision">Stückteilung</string>
    <string name="searchFragment_editText_colorId">Farb ID</string>
    <string name="searchFragment_editText_colorDescription">Farbbezeichnung</string>
    <string name="searchFragment_editText_size">Größe</string>
    <string name="searchFragment_editText_manufacturingState">Fertigungszustand</string>
    <string name="searchFragment_iconDescription_misc">Icon for Miscellaneous Searchattributes</string>
    <string name="searchFragment_iconDescription_color">Icon for Color Searchattributes</string>
    <string name="searchFragment_iconDescription_article">Icon for Article Searchattributes</string>
    <string name="itemArticle_textView_articleId">Artikel Nr.</string>
    <string name="itemArticle_textView_articleShortDescription">Artikel Kurzbezeichnung</string>
    <string name="itemArticle_textView_articleShortDescription_short">Artikel Kurzbez.</string>
    <string name="itemArticle_textView_pieceId">Stücknummer</string>
    <string name="itemArticle_textView_pieceDivision">Stückteilung</string>
    <string name="itemArticle_textView_colorId">Farb ID</string>
    <string name="itemArticle_textView_colorDescription">Farbbezeichnung</string>
    <string name="itemArticle_textView_amount">Menge</string>
    <string name="itemArticle_textView_size">Größe</string>
    <string name="itemArticle_textView_manufacturingState">Fertigungszustand</string>
    <string name="itemArticle_textView_manufacturingState_short">Fertzstd</string>
    <string name="itemArticle_placeholder_articleId">0</string>
    <string name="itemArticle_placeholder_articleShortDescription">placeholder</string>
    <string name="itemArticle_placeholder_pieceId">0</string>
    <string name="itemArticle_placeholder_pieceDivision">0</string>
    <string name="itemArticle_placeholder_colorId">0</string>
    <string name="itemArticle_placeholder_colorDescription">placeholder</string>
    <string name="filterFragment_submitButton">Filtern</string>
    <string name="filterFragment_textView_articleId">Artikel Nr</string>
    <string name="filterFragment_textView_articleShortDescription">Kurzbez.</string>
    <string name="filterFragment_textView_contains">(enthält)</string>
    <string name="filterFragment_textView_pieceId">Stücknummer</string>
    <string name="filterFragment_textView_pieceDivision">Stückteilung</string>
    <string name="filterFragment_textView_colorId">Farb ID</string>
    <string name="filterFragment_textView_colorDescription">Farbbez.</string>
    <string name="filterFragment_textView_size">Größe</string>
    <string name="filterFragment_textView_manufacturingState">Fert. Zustand</string>
    <string name="filterFragment_editText_articleId">Artikel Nr.</string>
    <string name="filterFragment_editText_articleShortDescription">Kurzbezeichnung</string>
    <string name="filterFragment_editText_pieceId">Stücknummer</string>
    <string name="filterFragment_editText_pieceDivision">Stückteilung</string>
    <string name="filterFragment_editText_colorId">Farb ID</string>
    <string name="filterFragment_editText_colorDescription">Farbbezeichnung</string>
    <string name="filterFragment_editText_size">Größe</string>
    <string name="filterFragment_editText_manufacturingState">Fertigungszustand</string>
    <string name="filterFragment_iconDescription_misc">Icon for Miscellaneous Searchattributes</string>
    <string name="filterFragment_iconDescription_color">Icon for Color Searchattributes</string>
    <string name="filterFragment_iconDescription_article">Icon for Article Searchattributes</string>
</resources>