<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:stretchColumns="*"
        android:isScrollContainer="true"
        android:padding="10dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:contentDescription="@string/regal1"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:contentDescription="@string/regal2"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:contentDescription="@string/regal3"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:contentDescription="@string/regal4"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:contentDescription="@string/regal5"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:contentDescription="@string/regal6"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:contentDescription="@string/regal7"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:contentDescription="@string/regal8"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:contentDescription="@string/regal9"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:contentDescription="@string/regal10"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:contentDescription="@string/regal11"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/item12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:contentDescription="@string/regal12"
                android:onClick="getClickedRegal"
                android:src="@drawable/ic_regal" />
        </TableRow>

    </TableLayout>
</ScrollView>
