<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/fach01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach01"
        app:layout_constraintBottom_toTopOf="@+id/fach03"
        app:layout_constraintEnd_toStartOf="@+id/fach02"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_regal2" />

    <ImageView
        android:id="@+id/fach02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach02"
        app:layout_constraintBottom_toTopOf="@+id/fach04"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/fach01"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_regal2" />

    <ImageView
        android:id="@+id/fach03"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach03"
        app:layout_constraintBottom_toTopOf="@+id/fach05"
        app:layout_constraintEnd_toStartOf="@+id/fach04"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/fach01"
        app:srcCompat="@drawable/ic_regal2" />

    <ImageView
        android:id="@+id/fach04"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach04"
        app:layout_constraintBottom_toTopOf="@+id/fach06"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/fach03"
        app:layout_constraintTop_toBottomOf="@id/fach02"
        app:srcCompat="@drawable/ic_regal2" />

    <ImageView
        android:id="@+id/fach05"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach05"
        app:layout_constraintBottom_toTopOf="@+id/fach07"
        app:layout_constraintEnd_toStartOf="@id/fach06"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/fach03"
        app:srcCompat="@drawable/ic_regal2" />

    <ImageView
        android:id="@+id/fach06"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach06"
        app:layout_constraintBottom_toTopOf="@+id/fach07"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/fach05"
        app:layout_constraintTop_toBottomOf="@id/fach04"
        app:srcCompat="@drawable/ic_regal2" />

    <ImageView
        android:id="@+id/fach07"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="getClickedRegalFach"
        android:scaleType="fitXY"
        android:contentDescription="@string/regalFach07"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/fach05"
        app:srcCompat="@drawable/ic_regal2" />

    <TextView
        android:id="@+id/textviewRegalfachbezeichnung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Regalbezeichnung" />


</androidx.constraintlayout.widget.ConstraintLayout>